# TBarrier

./: pyproject.toml
tbarrier/: __init__.py  ftle.py
tbarrier/2D/: __init__.py
tbarrier/2D/demos/StochasticBarriers/Main/: EllipticStochasticBarriersAgulhas.ipynb
tbarrier/2D/subfunctions/: interpolant.py
tbarrier/subfunctions/: SVD.py  __init__.py  check_location.py  eigen.py  gradient_flowmap.py  integration2D.py
